# AWSInfra

./: .gitignore  README.md
CryptoScrape/infra/: apply-tf.sh  basic.tfvars  cloud_compute.tf  cloud_run.tf  function.tf  main.tf  provider.tf  random_uuid.tf  storage.tf  variables.tf
CryptoScrape/selenium-scrape/: pyproject.toml  temp-pyproject.toml
CryptoScrape/selenium-scrape/selenium_scrape/: main.py
CryptoScrape/src/: main.py
game1/: pyproject.toml
game1/game1/: main.py
game1/tests/: test_game1.py
infra/: backend.tf  basic.tfvars  cloud_compute.tf  cloud_run.tf  main.tf  output.tf  service_accounts.tf  vpc.tf
webapp/: pyproject.toml
webapp/webapp/: main.py
webapp/webapp/templates/: index.html  result.html
