[tool.poetry]
name = "game1"
version = "0.1.0"
description = "Game1 is a game developed by Hellu and Olkku. We don't know what it does, but it uses pygame modules to do it."
authors = ["Oliver Lybeck <oliver.lybeck@nominet.uk>"]

[tool.poetry.scripts]
start = "game1.main:start()"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
