[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Oliver Lybeck <oliver.lybeck@nominet.uk>"]

[tool.poetry.scripts]
start = "webapp.main:start()"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
