[tool.poetry]
name = "selenium-scrape"
version = "0.1.0"
description = ""
authors = ["Oliver Lybeck <oliver.lybeck94@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.2"
pandas = "^2.1.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
